--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,6 +1,11 @@
 .imgBanner {
-    margin-top:4%;
+    margin-top:3%;
     height: 700px;
+    position:relative;
+  }
+  .slick-dots li button{
+    position: absolute;
+    bottom:30px;
   }
   h1.ant-typography,
   .ant-typography h1 {
@@ -86,37 +91,42 @@
   /* cinemaList */
   .cinemaListInfo{
       margin: auto;
-      width: 70%;
+      width: 75%;
       padding: 1rem;
       border: 1px solid #8080806e;
       margin-top: 3rem;
       margin-bottom: 3rem;
   }
 
- 
-  .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 350px;
-    perspective: 2000px;
-    margin:1rem;
-  }
-  
-  .flip-card-front {
-    position: relative;
-    width: 85%;
-    height: 100%;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .flip-card:hover .flip-card-front {
-    transform: rotateY(360deg);
-  }
-  .flip-card-front img{
-    transform: rotateY(360deg);
-  }
-  
-  
-  
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 350px;
+  perspective: 2000px;
+  margin: 1rem;
+}
+
+.flip-card-front {
+  position: relative;
+  /* width: 85%; */
+  height: 80%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+}
+
+.flip-card:hover .flip-card-front {
+  transform: rotateY(360deg);
+}
+.flip-card-front img {
+  transform: rotateY(360deg);
+}
+
+.bgBanner {
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: center !important;
+}
