--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 /* ./src/index.css */
-tailwind base,
-tailwind components,
-tailwind utilities,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 
 body {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   /* overflow-x: hidden; */
   font-family: "Roboto" sans-serif;
   -webkit-font-smoothing: antialiased;
